[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ScrollableContainers"
version = "1.0.0"
authors = [
    { name="Vishal Pankaj Chandratreya" },
]
description = "Scrollable containers for Tkinter, wxPython, PyQt5 and PyQt6"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tfpf/ScrollableContainers"
"Bug Tracker" = "https://github.com/tfpf/ScrollableContainers/issues"
