[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ScrollableContainers"
version = "1.1.1"
authors = [
    { name="Vishal Pankaj Chandratreya" },
]
description = "Scrollable containers for Tkinter, wxPython, PyQt5 and PyQt6"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tfpf/ScrollableContainers"
"Bug Tracker" = "https://github.com/tfpf/ScrollableContainers/issues"
