[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ScrollableContainers"
version = "2.0.2"
authors = [
    { name = "Vishal Pankaj Chandratreya" },
]
description = "Scrollable containers for Tkinter, wxPython, PyQt5 and PyQt6"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
qt5 = ["PyQt5"]
qt6 = ["PyQt6"]
wx = ["wxPython"]

[project.urls]
"Homepage" = "https://github.com/tfpf/ScrollableContainers"
"Bug Tracker" = "https://github.com/tfpf/ScrollableContainers/issues"

[tool.hatch.envs.dev]
features = [
    "qt5",
    "qt6",
    "wx",
]

[tool.ruff.lint.per-file-ignores]
"src/ScrollableContainers/__init__.py" = ["F401", "N999"]
"src/ScrollableContainers/_tk.py" = ["PLR2004"]
